crates/mir/tests/fixtures/errors/return_borrow_conditional_overlap.snap
---
source: crates/mir/tests/lowering_errors.rs
assertion_line: 27
expression: err.to_string()
input_file: tests/fixtures/errors/return_borrow_conditional_overlap.fe
---
error[8-0068]: explicit reborrow required
   ┌─ return_borrow_conditional_overlap.fe:10:33
   │
10 │     let p: mut u256 = choose(b, px, py)
   │                                 ^^ this argument must be explicitly borrowed as `mut`
   │
   = help: use `mut <place>` when passing a place to a `mut` parameter

error[8-0068]: explicit reborrow required
   ┌─ return_borrow_conditional_overlap.fe:10:37
   │
10 │     let p: mut u256 = choose(b, px, py)
   │                                     ^^ this argument must be explicitly borrowed as `mut`
   │
   = help: use `mut <place>` when passing a place to a `mut` parameter
